[package]
name = "libinput_scroll_shim"
version = "0.1.0"
edition = "2021"
description = "LD_PRELOAD shim to scale libinput scroll deltas (GNOME/Mutter/Wayland)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
